fix right click on background image triggers its context menu, not body's
we add another container and scale that instead. This way the body (at
z=0) still covers the entire viewport, and we never trigger the right
click menu for the image at z = -5.

--- a/css/src.css
+++ b/css/src.css
@@ -9,7 +9,7 @@
   html {
     font-size: 20px;
   }
-  body {
+  .outer {
     width: min(100ch, 90%);
     @apply mx-auto mt-[5%];
   }
